@@ -1,5 +1,9 @@
 [b]Version 0.6.0rc4[/b] (not released yet):
 
+(2008-04-11)
+ * Added support for the mouse XButton1 and XButton2. This is untested as
+   my mouse doesn't have those buttons.
+
 (2008-04-10)
  * Added in Preferences->General->Video an option to select the default
    deinterlacer. It will be used for new videos opened.
